modified signup and sign in also added a welcome page and home page and atrip page

--- a/newlogincss.css
+++ b/newlogincss.css
@@ -12,9 +12,26 @@
     display: inline-block;
     padding:30px;
     border-radius: 10px;
-    margin-top: 100px;
+    margin-top: 10px;
   }
- 
-  .btn btn-info{
-    width: 50%;
-  }
+
+ .form-group{
+    width: 300px; 
+ }
+ .msg{
+    font-size: 13px;
+    width: 300px;
+    /*display: none;*/
+ }
+ #signUpButton {
+    width: 300px;
+ }
+ #terms{
+    font-size: 12px;
+    width: 300px;
+    color: #006400;
+    font-weight: bold;
+ }
+ #emptyFields, #emailError, #mobError, #passError, #userError, #emptyError, #emptyError1{
+    display: none;
+ }
